--- a/CCT/index.html
+++ b/CCT/index.html
@@ -11,6 +11,7 @@
     <div id = "startMenu">
         <h1>PAC-MAN!!!</h1>
         <p>Use Arrow keys W/A/S/D or arrow keys to move Pac-Man</p>
+        <p>Conquer level 3 to claim your victory!</p>
         <button id = "startGame">BEGIN GAME!</button>
     </div>
 
